dist/home/Deployment.home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: home
  name: home
  namespace: home
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: home-app-home-app-deployment-c8467b6c
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home
        cdk8s.io/metadata.addr: home-app-home-app-deployment-c8467b6c
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TITLE
              value: Cmdcentral Home
            - name: LOGO
              value: ""
            - name: HEADER
              value: "false"
          image: jordanroher/starbase-80
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 4173
              scheme: HTTP
            initialDelaySeconds: 60
          name: home
          ports:
            - containerPort: 4173
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 4173
              scheme: HTTP
            initialDelaySeconds: 30
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /app/src/config/config.json
              name: configmap-home-config
              subPath: config.json
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: home-config
          name: configmap-home-config
