dist/home/Service.home.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
spec:
  externalIPs: []
  ports:
    - name: http
      port: 4173
      targetPort: 4173
  selector:
    cdk8s.io/metadata.addr: home-app-home-app-deployment-c8467b6c
  type: ClusterIP
