dist/home/Ingress.home.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: home
  namespace: home
spec:
  rules:
    - host: home.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: home
                port:
                  number: 4173
            path: /
            pathType: Prefix
    - host: cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: home
                port:
                  number: 4173
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.cmdcentral.xyz
        - cmdcentral.xyz
      secretName: home-tls
